--- a/project.html
+++ b/project.html
@@ -27,6 +27,7 @@
 			
 			<div class='ProjectContent'>
 				<h1>#Project</h1>
+				<p>WARNING! <span class='color-green'>Since my application isn't signed, it might be mistaken for a virus.</span></p>
 				<div class='ProjectList'>
 					<a href='https://drive.usercontent.google.com/download?id=1ICPkMyQwCT9pnIYD9CJqIjpmtgqwcX18&export=download&authuser=0' target='_blank'>Image Compressor</a> <br>
 					<img src='resources/imagecompressor.jpg'>
